--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
-    "mongodb": "^6.9.0"
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.2"
   }
 }
